# voice-notes

./: .gitignore  app.py  config.py  prompts.yaml  pyproject.toml
agents/: scribe.py  transcribe.py
scribe/: scribe_2026-05-01_15-55-56.txt  scribe_2026-05-01_15:47:35  scribe_2026-05-01_16-13-10.txt
testing/: time_taken.md
transcriptions/: transcription_2026-04-30 19:32:15.322646  transcription_2026-04-30 19:33:34_base  transcription_2026-04-30 19:42:09_small  transcription_2026-05-01 15:23:51_medium  transcription_2026-05-01_17-15-40.txt  transcription_2026-05-01_17-26-40_base.txt  transcription_2026-05-01_17-33-57_small.txt  transcription_2026-05-01_19-40-33_base.txt  transcription_26-05-05_May-05-1777998518_base.txt
utils/: .gitignore  audio_utils.py  file_utils.py  llm_utils.py
