[project]
name = "voice-notes"
version = "0.1.0"
description = "A scribe that converts voice input to a full text journal entry"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openai-whisper==20250625",
    "ollama==0.6.2",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "certifi==2026.4.22",
    "charset-normalizer==3.4.7",
    "cuda-bindings==13.2.0",
    "cuda-pathfinder==1.5.4",
    "cuda-toolkit==13.0.2",
    "filelock==3.29.0",
    "fsspec==2026.3.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.13",
    "jinja2==3.1.6",
    "llvmlite==0.47.0",
    "markupsafe==3.0.3",
    "more-itertools==11.0.2",
    "mpmath==1.3.0",
    "networkx==3.6.1",
    "numba==0.65.1",
    "numpy==2.4.4",
    "nvidia-cublas==13.1.0.3",
    "nvidia-cuda-cupti==13.0.85",
    "nvidia-cuda-nvrtc==13.0.88",
    "nvidia-cuda-runtime==13.0.96",
    "nvidia-cudnn-cu13==9.19.0.56",
    "nvidia-cufft==12.0.0.61",
    "nvidia-cufile==1.15.1.6",
    "nvidia-curand==10.4.0.35",
    "nvidia-cusolver==12.0.4.66",
    "nvidia-cusparse==12.6.3.3",
    "nvidia-cusparselt-cu13==0.8.0",
    "nvidia-nccl-cu13==2.28.9",
    "nvidia-nvjitlink==13.0.88",
    "nvidia-nvshmem-cu13==3.4.5",
    "nvidia-nvtx==13.0.85",
    "pydantic==2.13.3",
    "pydantic-core==2.46.3",
    "pyyaml==6.0.3",
    "regex==2026.4.4",
    "requests==2.33.1",
    "setuptools==81.0.0",
    "six==1.17.0",
    "sympy==1.14.0",
    "tiktoken==0.12.0",
    "torch==2.11.0",
    "tqdm==4.67.3",
    "triton==3.6.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
]
